--- a/css/uganda.map.css
+++ b/css/uganda.map.css
@@ -24,11 +24,14 @@ html {
 }
 
 .top-panel {
-      background-color: rgba(255,255,255,.9);
+      /*background-color: rgba(255,255,255,.9);*/
 }
 
-.top-panel.col-md-12.col-sm-12 {
-    margin-top: 10px;
+.top-panel.col-md-8.col-sm-8 {
+        margin-top: 10px;
+    position: absolute;
+    z-index: 9;
+    left: 570px;
 }
 
 p.custom-count-header {
@@ -41,16 +44,25 @@ p.custom-count-header {
 }
 
 p.custom-count {
-  font-family: Roboto,sans-serif;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 28px;
-  color: #52595e;
+    font-family: Roboto,sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    background-color: #55aa00;
+    line-height: 28px;
+    color: #ffffff;
+    margin: 8px -4px -8px -4px;
+    padding: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
 }
 
 .head {
-      border-bottom: 1px solid #c3cdd4;
-          padding: 8px 0px 4px 8px!important;
+    padding: 8px 4px!important;
+    text-align: center;
+    background-color: rgba(255,255,255,.9);
+    margin: 0 5px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
 .left-panel .head .col-md-12 {
@@ -85,21 +97,21 @@ p.custom-count {
 
 #d3-map-refresh {
     position: absolute;
-    top: 5px;
-    right: 299px;
+    top: 165px;
+    left: 270px;
     cursor: pointer;
     z-index: 9;
     border-radius: 4px;
     background: #FFF;
-    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.24), 0 4px 8px 0 rgba(0, 0, 0, 0.16);
-    padding: 5px 20px;
+    /* box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.24), 0 4px 8px 0 rgba(0, 0, 0, 0.16); */
+    padding: 5px 10px;
     font-size: 13px;
 }
 
 #d3-map-info {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 125px;
+    left: 270px;
     background-color: rgba(255,255,255,.9);
     padding: 5px 10px;
     color: #777777;
@@ -144,7 +156,7 @@ div.d3-tooltip p b {
 
 .custom-list-header {
     margin: 0;
-    padding: 4px;
+    padding: 7px 6px;
     background-color: #fff;
     font-size: 16px;
     color: #52595e;
@@ -159,6 +171,7 @@ p.custom-list-header  .glyphicon {
     float: right;
     padding: 3px 10px 0 0;
     font-size: 13px;
+    color: #55aa00;
 }
 
 .custom-list {
@@ -171,12 +184,13 @@ p.custom-list-header  .glyphicon {
 }
 
 .custom-list p {
-  padding: 0px 5px;
-  margin: 0;
-  cursor: pointer;
+    padding: 3px 5px;
+    margin: 0;
+    cursor: pointer;
 }
 .custom-list p:hover{
     background: rgba(85, 170, 0, 0.12) !important;
+        color: #000!important;
 }
 .collapsed {
   display: none;
@@ -197,4 +211,18 @@ p.custom-list-header  .glyphicon {
 
 .menu-panel.col-md-6.col-sm-6 {
   padding: 0;
+}
+
+div#district-list .d3-active {
+  color: #fff;
+}
+
+.list-container>.col-md-12:first-child p.custom-list-header {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.list-container>.col-md-12:last-child p.custom-list-header {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
