Show spinnner while generating PDF. Don't list filter values.

--- a/css/uganda.map.css
+++ b/css/uganda.map.css
@@ -296,3 +296,7 @@ span.colorbox.four {
   pointer-events: none;
   cursor: not-allowed!important;
 }
+
+#d3-map-make-pdf.disabled {
+  color: #c0c0c0;
+}
