Add legend outside of map

--- a/css/uganda.map.css
+++ b/css/uganda.map.css
@@ -300,3 +300,9 @@ span.colorbox.four {
 #d3-map-make-pdf.disabled {
   color: #c0c0c0;
 }
+
+#legend {
+  position: absolute;
+  top: 245px;
+  left: 270px;
+}
