--- a/css/uganda.map.css
+++ b/css/uganda.map.css
@@ -103,15 +103,17 @@ p.custom-count {
   padding: 10px 0 10px 10px;
   position: absolute;
   z-index: 500;
+  min-width: 200px!important;
+  max-width: 200px!important;
 }
 
 .left-panel .col-md-12 {
   padding: 0;
 }
 
-.left-panel.col-md-4.col-sm-4 {
-    min-width: 500px!important;
-    max-width: 500px!important;
+.left-panel.col-md-2 {
+    min-width: 250px!important;
+    max-width: 250px!important;
 }
 
 .right-panel {
@@ -127,7 +129,7 @@ p.custom-count {
 
 #d3-map-refresh {
     position: absolute;
-    top: 165px;
+    top: 130px;
     left: 270px;
     cursor: pointer;
     z-index: 9;
@@ -141,7 +143,7 @@ p.custom-count {
 
 #d3-map-make-pdf {
   position: absolute;
-  top: 205px;
+  top: 165px;
   left: 270px;
   cursor: pointer;
   z-index: 9;
@@ -154,10 +156,7 @@ p.custom-count {
 }
 
 #d3-map-info {
-    position: absolute;
-    top: 125px;
-    left: 270px;
-    background-color: rgba(255,255,255,.9);
+    width: 100%;
     padding: 5px 10px;
     color: #777777;
     font-family: Roboto,sans-serif;
@@ -178,6 +177,7 @@ p.custom-count {
 
 div.d3-tooltip {
   color: #222;
+  text-align: left;
   background: #fff;
   padding: .5em;
   text-shadow: #f5f5f5 0 1px 0;
@@ -194,10 +194,7 @@ div.d3-tooltip p {
   margin: 0;
 }
 
-div.d3-tooltip p b {
-  margin-left: 5px;
-  float: right;
-}
+
 
 .d3-hide {
   display: none;
@@ -339,6 +336,6 @@ span.colorbox.four {
 
 #legend {
   position: absolute;
-  top: 245px;
+  top: 200px;
   left: 270px;
 }
