--- a/css/uganda.map.css
+++ b/css/uganda.map.css
@@ -56,6 +56,7 @@ html {
     width: 150px;
     z-index: 500;
     right: 50px;
+
 }
 
 .right-panel {
@@ -225,7 +226,7 @@ p.custom-list-header .glyphicon {
 
 .custom-list {
     text-align: center;
-    height: 125px;
+    height: 80px;
     margin: 0;
     padding: 0px;
     top: 20px;
@@ -359,4 +360,27 @@ span.colorbox.four {
     position: absolute;
     top: 200px;
     left: 270px;
+}
+/*
+ *  STYLE 1
+ */
+
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
 }
